css/style.css
html, body { font-family: 'Montserrat', sans-serif; text-align: center; color: #444; font-size: 18px; scroll-behavior: smooth; }
p { text-align: left; }
h1, h2, h3 { color: #686321; font-weight: 500; }
h4 { color: #777; }
hr { max-width: 150px; height: 1px; background-color: #fdb834; border-radius: 2px; }
.bottom-right { position: fixed; bottom: 0; right: 0; width: 20vw; max-width: 180px; }
.section {
  min-height: 100vh;
  padding-top: 150px;
  padding-bottom: 80px;
  overflow: hidden;
  z-index: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  position: relative;
}
.next-page {
  width: 100%;
  position:absolute;
  bottom: 0px;
  display: flex;
  justify-content: center;
}
.next-page a {
  height: 50px;
  padding: 8px;
  padding-top: 13px;
  background-color: #fdb834;
  border-radius: 5px;
  margin-bottom: 10px;
  color: #fff;
  box-shadow: 0px 2px 3px #999;
}

#header {
  padding-top: 5px;
  background-color: #fdb834;
  position: fixed;
  width: 100%;
  z-index: 2;
  box-shadow: 0px 2px 3px #888;
}
.header-row { display: flex; align-items: center; height: 20vw; max-height: 120px; }
.header-row .leaf { height: 14vw; max-height: 120px; align-self: flex-end; }
.header-row .header-title img { height: 10vw; max-height: 80px; }
.header-row h2 { padding-top: 0.75vw; font-size: 18px; }
.header-title { transform: translateX(-5vw); margin-left: auto; margin-right: auto; }
.hamburger { padding: 0px; }
.hamburger span { color: white; }

#nav-menu { background-color: white; }
.nav-menu-list { padding: 0px; padding-top: 30px; list-style: none; display: flex; flex-direction: column; justify-content: space-between; }
.nav-menu-list li { font-size: 3.5vh; padding: 20px;}
.nav-menu-list a { color: #266491; }

#our-mission { background-position: bottom right; background-repeat: no-repeat; background-size: 200px; }

#global-problem { background-image: url('../assets/surgeon.jpeg'); background-size: cover; }
#global-problem .text-box { background-color: rgba(255, 255, 255, 1); border-radius: 20px; margin-left: auto; margin-right: auto; padding: 20px; }
#global-problem p {
  color: #fdb834;
  text-align: center;
  margin: 0px;
}
ul.infographics { padding: 0px; padding-top: 20px; list-style-type: none; color: white; display: flex; justify-content: center; flex-wrap: wrap; }
.infographics li { background-color: #266491; box-shadow: 0px 2px 3px #888; border-radius: 10px; margin: 20px; padding: 20px; width: 260px; }
.infographics img { height: 50px; padding-bottom: 10px; }

#who-quote {
  background-color: #f2f2f2;
}
#who-quote .quote { font-weight: bold; color: #444; margin-top: 40px; font-style: italic; font-size: 16px; max-width: 600px; margin-left: auto; margin-right: auto; }

#what-we-do {
  background-image: url("../assets/health-skull.jpg");
  background-size: cover;
}
#what-we-do .container {
  max-width: 640px;
  padding: 20px;
  background-color: rgba(255, 255, 255, 0.9);
  border-radius: 20px;
  box-shadow: 0px 2px 3px #888;
}
#what-we-do a { color: #266491; }

#healthinote { background-color: #f2f2f2; }
#healthinote li { text-align: left; }
#healthinote .text { max-width: 600px; }
.healthinote-row { display: flex; justify-content: center; flex-wrap: wrap; }
.healthinote-img { height: 500px; margin: 20px; }

.value-hovers { display: flex; flex-wrap: wrap; justify-content: center; padding: 0px; }
.value-hovers p { color: #266491; text-align: center; margin: 0px; padding-bottom: 5px; }
.value-hovers h4 { padding: 0px; margin: 0px; }
.value-hovers li {
  list-style-type: none;
  align-self: flex-start;
}
.value-hovers li a {
 display:block;
 background-color: #f2f2f2;
 color: #777;
 box-shadow: 0px 2px 0px #266491;
 border: solid;
 border-width: 2px;
 border-color: #266491;
 border-radius: 20px;
 width: 300px;
 padding: 10px;
 margin: 20px;
}
.value-hovers li a:hover, .value-hovers li a:focus {
 background-color: #eaeaea;
 box-shadow: 0px 0px 0px #266491;
 color: #777;
 text-decoration: none;
}

#case-studies { background-color: #f2f2f2 }
#case-studies .scrolling-quotes { display: flex; justify-content: center; flex-wrap: wrap; padding: 0px; }
#case-studies .scrolling-quotes li {
  list-style-type: none;
  margin: 20px;
  width: 400px;
}
#case-studies h4 { color: #fdb834; }
#case-studies .quote p { font-size: 16px; text-align: center;}

#our-partners {
    background-image: url("../assets/sky-parachutes.jpg");
    background-size: cover;
    background-attachment: fixed;
    color: white;
}
#our-partners hr { background-color: white; }
#our-partners h3 { color: white; }
.partners { display: flex; flex-wrap: wrap; justify-content: center; padding: 0px; }
.partners li { list-style-type: none; margin: 80px; }

#team .text { text-align: left; }
.team-members { display: flex; flex-wrap: wrap; justify-content: center; }
.team-member { width: 450px; margin-bottom: 20px; margin-right: 20px; }
.team-member-row img { width: 80vw; max-width: 200px; }
.team-member-row { display: flex; flex-wrap: wrap; justify-content: flex-start; align-items: center; }
.team-info-row { display: flex; flex-wrap: wrap; justify-content: flex-start; align-items: center;}
.team-member-row * { margin: 5px; }
.team-member-row p { margin-left: 0px; }
.team-info-row img { width: 20px; }
.team-info-row a { color: #266491; }

#find-more { background-color: #f2f2f2 }
#find-more a { color: #266491; }
#find-more p { margin-bottom: 40px; }
#find-more input[type="text"] { font-size: 14px; }
#find-more form { font-size: 10px; width: 80vw; max-width: 600px; background-color: white; padding: 20px; border-radius: 10px; margin-top: 10px; }
#find-more select { height: 35px; margin: 5px; }
.cbGroup { display: flex; }
.cbGroup input { width: auto; margin-right: 5px; }
.find-out-more-row { display: flex; justify-content: center; flex-wrap: wrap; }
.find-out-more-left { text-align: left; padding-right: 30px; }
.find-out-more-right { display: flex; flex-direction: column; }
.twitter-follow-button { margin-top: 20px; margin-left: auto; margin-right: auto; }
.linkedin-follow iframe { width: 100px; height: 44px; margin-top: 20px; margin-left: auto; margin-right: auto; }


.footer {
  width: 100%;
  z-index: 1;
  padding: 30px 0;
  background-color: #333;
  text-align: center;
}
.footer h3 {
	color: #ffffff;
	font-size: 17px;
	font-weight: 300;
	text-transform: uppercase;
	margin-bottom: 10px;
	line-height: 1.3em;
}
.footer p {
	color: #ffffff;
	font-size: 13px;
	font-weight: 300;
	margin: 0;
	line-height: 1.3em;
  text-align: center;
}
.footer a.email:link, .footer a.email:visited, .footer a.email:active {
	color: #fdb834;
	font-size: 17px;
	font-weight: 600;
	transition: all 0.5s ease;
	margin-bottom: 20px;
}
.footer a.email:hover, .footer a.email:visited:hover, .footer a.email:focus {
	text-decoration: underline;
	outline: 0 none;
	color: #fdb834;
	transition: all 0.5s ease;
}
.footer hr {
  border-top: 1px solid #fff;
	width: 130px;
	margin-top: 20px;
	margin-bottom: 20px;
	opacity: 0.15
}

.footer .li {
	width: 28px;
	height: 27px;
	margin-right: 5px;
	display: inline-block;
}
.footer .tw {
	width: 31px;
	height: 27px;
	margin-left: 5px;
	display: inline-block;
}
.footer .social-media .li:hover, .footer .social-media .tw:hover {
	opacity: 0.5;
	color: #333;
	cursor: pointer;
	text-decoration: none;
}
.social-media {
	margin-left: auto;
	margin-right: auto;
	display: block;
	margin-top: 20px;
	margin-bottom: 10px;
}

